--- a/register.html
+++ b/register.html
@@ -138,7 +138,7 @@
   <body>
     <div class="center">
       <h1>Registrasi</h1>
-      <form method="post" action="login.html">
+      <form method="post" action="index.html">
         <div class="txt_field">
           <input type="text" >
           <span></span>
